[gd_scene load_steps=11 format=2]

[ext_resource path="res://graphics/lab/Hintergrund LABOR_neu.jpg" type="Texture" id=1]
[ext_resource path="res://graphics/TransparentButton.png" type="Texture" id=2]
[ext_resource path="res://src/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://graphics/lab/Stamp.png" type="Texture" id=4]
[ext_resource path="res://src/rooms/Room_LB_LAB.gd" type="Script" id=5]
[ext_resource path="res://graphics/lab/backArrow.png" type="Texture" id=6]
[ext_resource path="res://graphics/general/Note2.png" type="Texture" id=7]
[ext_resource path="res://font/besley/Besley-Fatface.otf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 27
font_data = ExtResource( 8 )

[node name="RoomLAB" type="Node2D"]
script = ExtResource( 5 )

[node name="LabBackground" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.65649, 0.65649 )
texture = ExtResource( 1 )

[node name="Stamp" type="Sprite" parent="LabBackground"]
position = Vector2( -402.087, 90.2248 )
rotation = -0.218166
scale = Vector2( 0.288225, 0.285581 )
texture = ExtResource( 4 )

[node name="CleanLabPhone" type="TouchScreenButton" parent="LabBackground"]
position = Vector2( 447.9, -370.822 )
rotation = -0.244346
scale = Vector2( 0.212942, 0.5943 )
normal = ExtResource( 2 )

[node name="CodeNote" type="TouchScreenButton" parent="LabBackground"]
position = Vector2( 468.418, 68.5949 )
scale = Vector2( 0.345451, 0.454667 )
normal = ExtResource( 2 )

[node name="StampZoom" type="TouchScreenButton" parent="LabBackground"]
position = Vector2( -482.153, 15.8245 )
rotation = -0.296706
scale = Vector2( 0.158866, 0.143963 )
normal = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogBox" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.729412, 0.729412, 0.729412, 0.745098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Note2" type="Sprite" parent="CanvasLayer/DialogBox"]
position = Vector2( 542.677, 320 )
scale = Vector2( 0.48824, 0.488241 )
texture = ExtResource( 7 )

[node name="DialogOkButton" type="TouchScreenButton" parent="CanvasLayer/DialogBox"]
position = Vector2( 699.294, 383.8 )
scale = Vector2( 0.100854, 0.135635 )
normal = ExtResource( 2 )

[node name="Content" type="Label" parent="CanvasLayer/DialogBox"]
margin_left = 265.0
margin_top = 147.0
margin_right = 782.0
margin_bottom = 438.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "Für den Code wird eine Ziffer benötigt.
Das Rätsel hat dir aber eine 
mehrstellige Zahl ausgegeben.
Scheinbar hatte das Rätsel einen 
kleinen Programmierfehler. 
Finde die richtige Ziffer für den Code,
 indem du durch 72 teilst."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Important" type="Label" parent="CanvasLayer/DialogBox"]
margin_left = 298.0
margin_top = 133.0
margin_right = 751.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "IMPORTANT NOTE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 512, 300 )
current = true
script = ExtResource( 3 )
zoom_factor = 0.15

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_rotation = -17.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TouchScreenButton" parent="."]
position = Vector2( 117.143, 586.91 )
rotation = 3.14159
scale = Vector2( 0.16, 0.126 )
normal = ExtResource( 6 )
[connection signal="released" from="LabBackground/CleanLabPhone" to="." method="_on_CleanLabPhone_released"]
[connection signal="released" from="LabBackground/CodeNote" to="." method="_on_CodeNote_released"]
[connection signal="released" from="LabBackground/StampZoom" to="." method="_on_StampZoom_released"]
[connection signal="released" from="CanvasLayer/DialogBox/DialogOkButton" to="." method="_on_DialogOkButton_released"]
[connection signal="released" from="BackButton" to="." method="_on_BackButton_released"]
